logo width on mobile fixed

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -36,4 +36,8 @@ nav ul li {
     flex-direction: column;
   }
 
+  #logo {
+    width: 85%;
+  }
+
 }
